packages/res/themes/glow.css
.glow-window-label {
    background-color: white;
    color:black;
    border:Solid 1px #0f2777;
    border-radius: 0px 0px 5px 5px;
    box-sizing: border-box;
    margin-top:-2px;
    height:20px;
}

.glow-window-label.focus {
    background-color: #0f2777;
    color:white;
    box-shadow: 0px 0px 15px 3px #0f2777;
}

.glow-window-border {
    border:Solid 1px #0f2777;
    background:white;
    border-radius: 15px;
    overflow:hidden;
}

.glow-window-border.maximize {
    border-radius: 0px;
}

.glow-window-border.focus {
    box-shadow: 0px 0px 15px 3px #0f2777;
}

.glow-window-border.popup.focus {
    background:white;
}

.glow-window-border.popup {
    background:white;
}

.glow-window-margin {
    border:Solid 1px #0f2777;
    box-shadow: 0px 0px 15px 3px #0f2777;
    background:white;
    border-radius: 15px;
    margin:2px;
}

.glow-window-margin.maximize {
    border-radius: 0px;
    margin:0px;
}

.glow-window-top-left {
    background:#0f2777;
}

.glow-window-top-right {
    background:#0f2777;
}

.glow-window-bottom-left {
    background:#0f2777;
}

.glow-window-bottom-right {
    background:#0f2777;
}

.glow-window-title {
    border-bottom: none;
}

.glow-window-close {
    flex:none;
    width:18px;
    height:18px;
    background-color: white;
}

.glow-window-close::after {
    border-style: solid;
    border-width: 0.10em 0.10em 0 0;
    content: '';
    display: inline-block;
    height: 0.20em;
    left: 0.45em;
    position: relative;
    vertical-align: top;
    width: 0.20em;
    top: 0.35em;
    transform: rotate(135deg);
}

.glow-window-action {
    flex: none;
    width:18px;
    height:18px;
    margin-left: auto;
}

.glow-window-action:hover:active {
    box-shadow: 0px 0px 15px 3px #0f2777;
    border-radius: 15px;
}

.glow-window-minimize-arrow {
    background:#0f2777;
    position: relative;
    top:6px;
    left:6px;
    width:4px;
    height:4px;
    box-sizing: border-box;
    border-radius: 2px;
}

.glow-window-maximize-arrow {
    border-radius: 2px;
    position: relative;
    left:4px;
    top:5px;
    width:8px;
    height:8px;
    border:2px dotted #0f2777;
    box-sizing: border-box;
}

.glow-window-maximize-arrow.restore {
    border:2px solid #0f2777;
}

.glow-menu-horizontal span.select {
    background-color: #0f2777;
    color:white;
    border-right: 1px solid black;
}

.glow-menu-vertical {
    border-radius: 0px 0px 15px 15px;
    border: 2px solid #0f2777;
    box-shadow: none;
    overflow: hidden;    
}

.glow-menu-vertical span {
    background-color: transparent;
}

.glow-menu-vertical span:hover {
    background-color: #0f2777;
    color:white;
}

.glow-scrollbar-vertical-border {
    border-radius: 5px;
    background:white;
}

.glow-scrollbar-horizontal-border {
    border-radius: 5px;
    background:white;
}

.glow-scrollbar-corner {
    background:white;
    border:none;
}

.glow-scrollbar-button {
    background:white;
    color:#0f2777;
    border-radius:5px;
    border:1px solid #0f2777;
    flex:none;
    min-width:16px;
    min-height:16px;
}

.glow-scrollbar-button:hover:active {
    color:white;
    background:#0f2777;
}

.glow-scrollbar-vertical-before-arrow {
    position: relative;
    border-style: solid;
    border-width: 0.10em 0.10em 0 0;
    height: 3px;
    left: 5px;
    vertical-align: top;
    width: 3px;
    top: 6px;
    line-height:100%;
    transform: rotate(-45deg);
}

.glow-scrollbar-vertical-after-arrow {
    position: relative;
    border-style: solid;
    border-width: 0.10em 0.10em 0 0;
    height: 3px;
    left: 5px;
    vertical-align: top;
    width: 3px;
    top: 5px;
    line-height:100%;
    transform: rotate(135deg);
}

.glow-scrollbar-horizontal-before-arrow {
    position: relative;
    border-style: solid;
    border-width: 0.10em 0.10em 0 0;
    height: 3px;
    left: 6px;
    vertical-align: top;
    width: 3px;
    top: 5px;
    line-height:100%;
    transform: rotate(-135deg);
}

.glow-scrollbar-horizontal-after-arrow {
    position: relative;
    border-style: solid;
    border-width: 0.10em 0.10em 0 0;
    height: 3px;
    left: 4px;
    vertical-align: top;
    width: 3px;
    top: 5px;
    line-height:100%;
    transform: rotate(45deg);
}

.glow-scrollbar-horizontal-track {
    background:white;
}

.glow-scrollbar-vertical-track {
    background:white;
}

.glow-window-footer {
    background:white;
    border-top: 1px solid #0f2777;
}

